# web_test

./: .gitignore  pyproject.toml
web_test/: db.py  main.py
web_test/cruds/: robot.py  task.py
web_test/models/: robot.py  task.py
web_test/routers/: api.py  brouse.py
web_test/schemas/: post_test.py  robot.py  task.py
web_test/static/javascript/: add_robot.js  post-test.js  update_robot.js
web_test/templates/: camera.html  detail.html  hello.html  index.html  layout.html  management.html  notification.html  operate.html  post-test.html
web_test/templates/managements/: add_robot.html  update_robot.html
web_test/tools/: migrate_db.py
