[tool.poetry]
name = "web-test"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
fastapi = {extras = ["all"], version = "^0.118.0"}
jinja2 = "^3.1.6"
sqlalchemy = "^2.0.43"
aiosqlite = "<0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
